CHANGELOG

UNRELEASED
  * FEATURE : add AlgoliaSearchHelper.setState(filters) to get a filtered state
  * FEATURE : add AlgoliaSearchHelper.getStateAsQueryString to get a part of
  the state as a queryString
  * FEATURE : add AlgoliaSearchHelper.setStateAsQueryString to set the state
  of the helper with a query string

2.3.5 - 2015-09-12
  * FIX: getFacetStats should look into facets and disjunctiveFacets

2.3.4 - 2015-09-11
  * FIX: #208, getFacetValues should return an empty array if the facet is
  defined but there are no returned values for it (and not throw an exception)
  * CHORE : drop tests on iojs
  * CHORE : travis now requires us to install if missing node env

2.3.3 - 2015-09-09
  * FIX: hasRefinements fix, should check facet, disjunctive, hierarchical, numeric

2.3.2 - 2015-09-03
  * FIX: allow passing the `length` parameter, fix `searchParameters` iteration

2.3.1 - 2015-09-02
  * CHORE: add a console.error() when passing unknown parameters
  * FIX: add offset/length undocumented search parameters

2.3.0 - 2015-09-02
  * FEATURE: #136, fire a 'search' event once a search is sent to Algolia
  * FEATURE: ability to set multiple OR and AND filters with the numeric
  filter API
  * FEATURE: Ability to set the raw numeric filter string
  * CHORE: #125, events documentation
  * FIX(CANBREAK): semantic of addNumericRefinement indeed add an numeric, does not
  update anymore. This can possibly BREAK your code if you were relying on this. Email support@algolia.com if it does
  * FEATURE: add `requestsent` event on the helper when any request is sent
  * FEATURE: add results.getFacetStats
  * FEATURE: add `results.getFacetValues` and add sortBy option to it

2.2.0 - 2015-07-29
  * FIX: #130 toggleRefine should throw an exception when executed with an
  attribute that is not a declared facet
  * TEST: add CI testing (browsers, phantom, node, io)
  * FEATURE: add hierarchicalFacets
  * FIX: fix IE8 and IE9 compatibility